# MAE-4750-HW3

./: CMakeLists.txt  README.md  hw.launch  package.xml
scripts/: .robot_interface.py.swp  Thumbs.db  baxter_connect.sh  controller.py  enable_open_gripper.py  enable_open_gripper.sh  robot_interface.py  waiter.py  ws_model.py
