<?xml version="1.0"?>
<package>
  <name>bax_hw3</name>
  <version>0.0.0</version>
  <description>Robot Manipulation HW3 submission for Anthony McNicoll (am859), Alexander Volkov (av333), and Zhuo Li (zl347). Connects to a Baxter machine and performs stacking with either one or two arms.</description>

  <maintainer email="am859@cornell.edu">Anthony McNicoll</maintainer>
  <maintainer email="av333@cornell.edu">Alexander Volkov</maintainer>
  <maintainer email="zl347)@cornell.edu">Zhuo Li</maintainer>

  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
